# AK

lab_2/: CMakeLists.txt  generate.cpp  sort.cpp  verify.cpp
